--- a/triton/integrate.ipynb
+++ b/triton/integrate.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,6 +414,7 @@
     "import time\n",
     "from kernels.quantize_gemm_int8 import *\n",
     "from kernels.conv2d import conv2d_triton\n",
+    "# from kernels.conv2d_implicit_gemm import triton_conv2d\n",
     "\n",
     "class GDdataset(Dataset):\n",
     "    def __init__(self, path):\n",
